--- a/estilos/style_artista.css
+++ b/estilos/style_artista.css
@@ -139,3 +139,101 @@ footer div a{
 footer div p{
     color: white;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+/*MOBILE---------------------------------------------------------------------------------------*/
+
+@media (max-width: 425px){
+    
+
+/*Header-----------------------------------------------------------------------------------------------*/
+
+
+header form{
+    width: 1rem;
+}
+
+header form input{
+    width: 5rem;
+}
+
+
+header nav ul{
+    width: 11rem;
+
+}
+
+
+header nav ul li a{
+    font-size: 0.7rem;
+}
+
+header div ul li a {
+    font-size:0.7rem;
+}
+
+
+/*Article 1--------------------------------------------------------------------------------------------*/
+
+.articulo1{
+    height: 4rem;
+}
+
+/*Article 2--------------------------------------------------------------------------------------------*/
+
+.articulo2{
+    height: 265rem;
+    
+}
+
+.articulo2 div{
+    border-radius: 3rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 23rem;
+    height: 80rem;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.articulo2 div img{
+    width: 18rem;
+    height: 18rem;
+}
+
+.articulo2 div div{
+    width: 20rem;
+    height: 50rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    margin-top: 5rem;
+}
+
+
+.articulo2 div div div{
+    height: 50rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+}
+
+.articulo2 div div div img{
+    width: 10rem;
+    height: 10rem;
+}
+
+}
