--- a/estilos/style_index.css
+++ b/estilos/style_index.css
@@ -3,7 +3,6 @@
     margin: 0;
     font-family: 'Roboto', sans-serif;
 }
-
 /*body-------------------------------------------------------------------------------------------------*/
 
 body{
@@ -163,4 +162,95 @@ footer div a{
 
 footer div p{
     color: white;
+}
+
+
+/*MOBILE----------------------------------------------------------------------------------------*/
+
+@media (max-width: 425px) {
+
+    /*body-------------------------------------------------------------------------------------------------*/
+
+
+/*Header-----------------------------------------------------------------------------------------------*/
+
+header{
+    background-color: #161925;
+    height: 5rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+
+}
+
+/*imagen logo--------------------------*/
+
+header img{
+    width: 5rem;
+}
+
+
+/*Nav----------------------------------*/
+
+
+
+header nav ul{
+    width: 11rem;
+
+}
+
+
+header nav ul li a{
+    font-size: 0.7rem;
+}
+
+header div ul li a {
+    font-size:0.7rem;
+}
+
+/*Article1--------------------------------------------------------------------------------------*/
+
+.articulo1{
+height: 23rem;
+}
+
+.articulo1 p{
+    color:aquamarine;
+    font-size: 1.9rem;
+    margin-top: 2rem;
+}
+
+
+/*Article2---------------------------------------------------------------------------------------------*/
+
+.articulo2{
+    display: flex;
+    height: 62rem;
+    flex-direction: column;
+
+}
+
+.articulo2 div{
+
+    background-color: #1b2a41;
+    width: 21rem;
+    height: 18rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.articulo2 div{
+
+    background-color: #1b2a41;
+    width: 19rem;
+}
+
+header img{
+    width: 5rem;
+}
+
 }
